# TDB_Export

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: init_schema.sql  plugin.cpp  plugin.hpp  tool.hpp  type.hpp
src/header_template/: sql_resource.h.in
vcpkg-custom-triplets/: x64-windows-static.cmake
